--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.465.0",
     "next": "^15.1.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+  "react": "^18.0.0",
+  "react-dom": "^18.0.0",
     "react-hook-form": "^7.53.2",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
