--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.46.2",
+    "@vercel/speed-insights": "^1.1.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,8 +34,8 @@
     "embla-carousel-react": "^8.5.1",
     "lucide-react": "^0.465.0",
     "next": "^15.1.0",
-  "react": "^18.0.0",
-  "react-dom": "^18.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-hook-form": "^7.53.2",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
