--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.53.2",
-    "sonner": "^1.7.0",
+    "resend": "^4.0.1",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
